fix issue with backface-visibility on some devices

--- a/projects/the-application/src/game/game.component.scss
+++ b/projects/the-application/src/game/game.component.scss
@@ -55,4 +55,5 @@ img {
   width: 100%;
   height: 100%;
   backface-visibility: hidden;
+  opacity: 0.99999;
 }
